# terraform-mongodbatlas-project

./: .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .terraform-versions.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  justfile  main.tf  outputs.tf  variables.tf  versions.tf
.github/: CODEOWNERS  pr-labeler.yml  pull_request_template.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/changelog/: __init__.py  allowed-prefixes.txt  allowed-types.txt  build_changelog.py  build_changelog_test.py  changelog.tmpl  check_changelog_entry_file_test.py  generate_release_body.py  generate_release_body_test.py  release-note.tmpl  update_changelog_version.py  update_changelog_version_test.py
.github/dev/: __init__.py  dev_vars.py  test_compat.py
.github/docs/: __init__.py  config_loader.py  doc_utils.py  doc_utils_test.py  examples_readme.py  examples_readme_test.py  generate_inputs_from_readme.py  generate_inputs_from_readme_test.py  md_link_absolute.py  root_readme.py  root_readme_test.py  submodule_readme.py  submodule_readme_test.py  tfdocs_links.py  tfdocs_links_test.py
.github/release/: __init__.py  release_notes.py  tf_registry_source.py  update_version.py  update_version_test.py  validate_version.py
.github/shared/: __init__.py  tf_retry.py  tf_retry_test.py
.github/tf_utils/: __init__.py  validate_versions_tf.py  validate_versions_tf_test.py  versions_tf_common.py
.github/workflows/: check-changelog-entry-file.yml  ci.yml  code-health.yml  generate-changelog.yml  notify-docs-team.yml  release.yml  (+5 more)
(+130 files in other folders)
